// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupMultiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select a fruit
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m group1
[36m│[39m  │ [32m◼[39m [2mgroup1value0[22m
[36m│[39m  └ [32m◼[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  │ [36m◻[39m [2mgroup1value1[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m│ [22m[2m◻[22m [2mgroup1value1[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value1
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[2m◻[22m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m└ [22m[32m◼[39m group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value0
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value0
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value0
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value0
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [32m◼[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  [2m[22m[36m◻[39m group1
[33m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[33m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[33m└[39m  [33mPlease select at least one option.[39m
   [0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m [2mgroup1[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value0
[36m│[39m  [2m  [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m [2mgroup1[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value0
[36m│[39m  [2m  [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m  [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mvalue0[22m
[36m│[39m  └ [36m◻[39m [2mvalue1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mvalue1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mvalue0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  Select a fruit
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m group1
[36m│[39m  │ [32m◼[39m [2mgroup1value0[22m
[36m│[39m  └ [32m◼[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  │ [36m◻[39m [2mgroup1value1[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m│ [22m[2m◻[22m [2mgroup1value1[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m│ [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value1
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value2[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[2m◻[22m [2mgroup1value0[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m└ [22m[32m◼[39m group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value0
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value0
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  └ [36m◻[39m [2mgroup1value0[22m
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m└ [22m[36m◻[39m group1value0
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[32m◼[39m [2mgroup1[22m
[36m│[39m  [2m└ [22m[32m◼[39m group1value0
[36m│[39m
[36m│[39m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [32m◼[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[33m▲[39m  foo
[33m│[39m  [2m[22m[36m◻[39m group1
[33m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[33m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[33m└[39m  [33mPlease select at least one option.[39m
   [0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[36m◆[39m  foo
[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mgroup1value0[22m
[36m│[39m  └ [36m◻[39m [2mgroup1value1[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m group1value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup1value1[22m
[36m│[39m  [2m[22m[2m◻[22m [2mgroup2[22m
[36m│[39m  [2m└ [22m[2m◻[22m [2mgroup2value0[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m [2mgroup1[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value0
[36m│[39m  [2m  [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m [2mgroup1[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value0
[36m│[39m  [2m  [22m[2m◻[22m [2mgroup1value1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "[36m│[39m  [2m  [22m[32m◼[39m [2mgroup1value0[22m
[36m│[39m  [2m  [22m[36m◻[39m group1value1
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m  [22m[32m◼[39m group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mgroup1value0[22m[2m, [22m[2mgroup1value1[22m",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m[22m[36m◻[39m group1
[36m│[39m  │ [36m◻[39m [2mvalue0[22m
[36m│[39m  └ [36m◻[39m [2mvalue1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "[36m│[39m  [2m[22m[2m◻[22m [2mgroup1[22m
[36m│[39m  [2m│ [22m[36m◻[39m value0
[36m│[39m  [2m└ [22m[2m◻[22m [2mvalue1[22m
[36m└[39m
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2m│ [22m[32m◼[39m value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[32m◇[39m  foo
[90m│[39m  [2mvalue0[22m",
  "
",
  "<cursor.show>",
]
`;
